src/objects/SFDC_Projects__c.object
<CustomObject>
    <fields>
        <fullName>SEO_Website_meta_titles__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SEO Website (meta &amp; titles)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SEO_ed_Footer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SEO&apos;ed Footer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scheduled_Kickoff_Meeting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scheduled Kickoff Meeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scheduled_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scheduled Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Self_Service_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Self Service Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_Intro_Email_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent Intro Email/Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_Questionnaire__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent Questionnaire</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sign_Up__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sign Up</label>
        <referenceTo>Sign_Up__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Silver_Stripe_CMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Silver Stripe CMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site_Edit_Pro_CMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Site Edit Pro CMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sold_by__c</fullName>
        <label>Sold by</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Solution Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Solutions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Solutions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Success_Factors__c</fullName>
        <label>Success Factors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Taken_Screen_Shot__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Taken Screen Shot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Template_Design__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Template Design</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <label>Total Cost</label>
        <summarizedField>Project_Cost__c.Amount__c</summarizedField>
        <summaryForeignKey>Project_Cost__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Net_Revenue__c</fullName>
        <formula>(Total_Revenue__c*10/11) - Total_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Net Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Revenue__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Total Revenue</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Training__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Twitter_Account_Password__c</fullName>
        <label>Twitter Account Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twitter_Account_Username__c</fullName>
        <label>Twitter Account Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Integration_Links__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Web Integration Links</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Webmaster_Password__c</fullName>
        <label>Webmaster Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Webmaster_Username__c</fullName>
        <label>Webmaster Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workflow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cms_details__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CMS Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ftp_details__c</fullName>
        <label>FTP Details</label>
        <picklist>
            <picklistValues>
                <fullName>Access &amp; Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounts &amp; Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaigns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cases &amp; Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Objects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dashboards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leads &amp; Opportunities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workflow</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>keywords_approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Keywords Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pfk_pfts__c</fullName>
        <label>PFK/PFT&apos;s</label>
        <picklist>
            <picklistValues>
                <fullName>Access &amp; Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounts &amp; Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaigns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cases &amp; Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Objects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dashboards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leads &amp; Opportunities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workflow</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>webmaster_tools__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Webmaster Tools</label>
        <type>Checkbox</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All_SEO_Projects</fullName>
        <columns>NAME</columns>
        <columns>Project_Stage__c</columns>
        <columns>Email__c</columns>
        <columns>Phone_Number__c</columns>
        <columns>Last_SEO_Analysis__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Type__c</field>
            <operation>contains</operation>
            <value>SEO,Web &amp; SEO,Additional SEO Work</value>
        </filters>
        <label>All SEO Projects</label>
    </listViews>
    <listViews>
        <fullName>All_Web_Projects</fullName>
        <columns>NAME</columns>
        <columns>Project_Stage__c</columns>
        <columns>Phone_Number__c</columns>
        <columns>Email__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Type__c</field>
            <operation>startsWith</operation>
            <value>Web</value>
        </filters>
        <label>All Web Projects</label>
    </listViews>
    <listViews>
        <fullName>Completed</fullName>
        <columns>NAME</columns>
        <columns>Project_Type__c</columns>
        <columns>Phone_Number__c</columns>
        <columns>Email__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Stage__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>Completed</label>
    </listViews>
    <listViews>
        <fullName>ConvertoPages</fullName>
        <columns>NAME</columns>
        <columns>Project_Type__c</columns>
        <columns>Project_Stage__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>Sold_by__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Type__c</field>
            <operation>equals</operation>
            <value>ConvertoPages</value>
        </filters>
        <filters>
            <field>Project_Stage__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>ConvertoPages Not Ready</label>
        <sharedTo>
            <role>SLXAusWebProjectManager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ConvertoPages_Project_ready</fullName>
        <columns>NAME</columns>
        <columns>Project_Type__c</columns>
        <columns>Project_Stage__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>Sold_by__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Type__c</field>
            <operation>equals</operation>
            <value>ConvertoPages</value>
        </filters>
        <filters>
            <field>Project_Stage__c</field>
            <operation>equals</operation>
            <value>Project Ready</value>
        </filters>
        <label>ConvertoPages Project Ready</label>
        <sharedTo>
            <role>SLXAusWebProjectManager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>In_Progress</fullName>
        <columns>NAME</columns>
        <columns>Project_Type__c</columns>
        <columns>Priority__c</columns>
        <columns>Phone_Number__c</columns>
        <columns>Email__c</columns>
        <columns>Days_Since_Created__c</columns>
        <columns>Days_Since_Last_Modified__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Stage__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>In Progress</label>
    </listViews>
    <listViews>
        <fullName>On_Hold</fullName>
        <columns>NAME</columns>
        <columns>Project_Type__c</columns>
        <columns>Phone_Number__c</columns>
        <columns>Email__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Stage__c</field>
            <operation>equals</operation>
            <value>On Hold</value>
        </filters>
        <label>On Hold</label>
    </listViews>
    <listViews>
        <fullName>Pending_1st_Contact</fullName>
        <columns>NAME</columns>
        <columns>Project_Type__c</columns>
        <columns>Priority__c</columns>
        <columns>Phone_Number__c</columns>
        <columns>Email__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Stage__c</field>
            <operation>contains</operation>
            <value>Pending 1st Contact</value>
        </filters>
        <label>Pending 1st Contact</label>
    </listViews>
    <listViews>
        <fullName>Pending_Project_Info</fullName>
        <columns>NAME</columns>
        <columns>Project_Type__c</columns>
        <columns>Priority__c</columns>
        <columns>Phone_Number__c</columns>
        <columns>Email__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Stage__c</field>
            <operation>contains</operation>
            <value>Pending Project Info</value>
        </filters>
        <label>Pending Project Info</label>
    </listViews>
    <listViews>
        <fullName>Project_Ready</fullName>
        <columns>NAME</columns>
        <columns>Project_Type__c</columns>
        <columns>Priority__c</columns>
        <columns>Phone_Number__c</columns>
        <columns>Email__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Contract_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Stage__c</field>
            <operation>contains</operation>
            <value>Project Ready</value>
        </filters>
        <label>Project Ready</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>